--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-    font-family: 'Open Sans',sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body {
@@ -8,7 +8,7 @@ body {
 
 .container {
     width: 320px;
-    height: 500px;
+    height: auto;
     background-color: white;
     margin: 20px auto;
     top: 20px;
@@ -30,23 +30,37 @@ td {
 
 button {
     margin: 10px;
-    font-size: 24px;
-    background-color: white;
+    font-size: 20px;
+    width: 55px;
+    height: 55px;
+    background-color: transparent;
+    /* border: 0.5px solid #ddd; */
     border: none;
     border-collapse: collapse;
     border-radius: 50%;
     cursor: pointer;
 }
 
+button:active{
+    font-size: 1em;
+}
+
 #ac {
-    border: solid 1px black;
-    width: 60px;
+    border: solid .3px #ddd;
+    border-radius: 50px;
+    width: 75px;
     height: 60px;
+    transition: all .5s ease;
 }
 
 #ac:hover {
-    background-color: rgb(161, 148, 148);
-    transition: 0.8s;
+    background-color: sandybrown;
+    border: solid .3px sandybrown;
+}
+
+#ac:active {
+    background-color: sandybrown;
+    border: solid .3px sandybrown;
 }
 
 .bagi {
@@ -94,7 +108,7 @@ button {
     text-align: right;
     padding-right: 16px;
     background-color: #ececec;
-    border-radius: 20px 20px 0 0;
+    border-radius: 20px ;
     border: .5px solid rgb(207, 198, 198);
     position: relative;
 }
